--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.com/2k25-scripture-union-camp-done-and-dusted">
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../styles.css?v=2">
 </head>
 <body>
   <header>
