--- a/index.html
+++ b/index.html
@@ -2,63 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>2k25 Scripture Union Camp: Done and Dusted | WodiWideWeb</title>
+  <title>WodiWideWeb</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Reflections from the 2025 Scripture Union Camp by Calchiwo. A story of peace, clarity, and finding God in the midst of thousands.">
+  <meta name="description" content="Official Homepage of WodiWideWebd">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://wodiwideweb.com/2k25-scripture-union-camp-done-and-dusted">
-  <link rel="stylesheet" href="../styles.css?v=2">
+  <link rel="canonical" href="https://wodiwideweb.com/home">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <header>
-    <h1>2k25 Scripture Union Camp: Done and Dusted</h1>
-    <p class="date">Published on August 3, 2025</p>
-    <img src="camp2025.jpg" alt="Group gathering at the 2025 Scripture Union Camp" class="featured-img">
+    <h1>Welcome to WodiWideWeb</h1>
+    <p class="date">The story behind the scene.</p>
+    <img src="WodiWideWeb.jpg" alt="WodiWodeWeb Logo" class="featured-img">
+
   </header>
+
   <main>
-    <article>
-      <section>
-        <p>It’s over.<br>
-        The 2025 SU Camp has ended.<br>
-        And honestly, I still feel the weight of it—in a good way.</p>
+    <section>
+      <p>Hi, I’m <strong>Caleb Wodi</strong> — a 15-year-old tech founder and storyteller from Nigeria. WodiWideWeb is my corner of the internet where I document my journey, share real moments, and reflect on what it means to build a future from scratch.</p>
 
-        <p>Thousands of people.<br>
-        So many moments.<br>
-        But somehow, I still found me in the middle of all the noise.</p>
+      <p>Start reading:</p>
+      <ul>
+        <li><a href="why-i-started-this-blog/">Why I Started This Blog</a></li>
+        <li><a href="sucamp2k25/">2k25 Scripture Union Camp: Done and Dusted</a></li>
+      </ul>
+    </section>
 
-        <p>This wasn’t just a camp.<br>
-        It was a reset.<br>
-        It pulled me out of “build mode” for a bit and brought me back to soul mode.<br>
-        No code. No launch plans. Just presence.</p>
-
-        <p>I didn’t try to meet everybody.<br>
-        I didn’t try to shine.<br>
-        I just showed up. Fully. Quietly.<br>
-        And in that space, I got to breathe.</p>
-
-        <p>I met a few people. Not many. But the ones I did meet? Real.<br>
-        I listened more than I talked.<br>
-        I watched. Reflected. Prayed.<br>
-        Wrote a few things down that I’m not ready to share yet—but I will, in time.</p>
-
-        <p>It’s wild that just being away from Rocjet for five days can make me see it clearer.<br>
-        I’m still building. Still focused.<br>
-        But now, with more peace.<br>
-        More clarity.<br>
-        More God.</p>
-
-        <p>If you were at camp too—thank you.<br>
-        Whether we talked or not, you were part of the energy that made this one unforgettable.</p>
-
-        <p>If you weren’t—this is me just letting you in.<br>
-        This was a moment for my blueprint. A page I’ll never erase.</p>
-
-        <p>Done and dusted… but definitely not forgotten.</p>
-
-        <p class="signature">—Calchiwo</p>
-      </section>
-    </article>
   </main>
   <footer>
     © 2025 Rocjet Technologies Ltd. All Rights Reserved.<br>
