--- a/why-i-started-this-blog/index.html
+++ b/why-i-started-this-blog/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<a href="/WodiWideWeb/index.html" class="back-button">← Back to Home</a>
   <header>
     <div class="container">
       <h1>Why I Started This Blog (And Why I Won’t Stop)</h1>
