Added Back To home button to my second blog

--- a/sucamp2k25/index.html
+++ b/sucamp2k25/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+<a href="/WodiWideWeb/index.html" class="back-button">← Back to Home</a>
   <header>
     <h1>2k25 Scripture Union Camp: Done and Dusted</h1>
     <p class="date">Published on August 3, 2025</p>
