--- a/404.html
+++ b/404.html
@@ -2,29 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Page Not Found</title>
+  <title>404 - Page Not Found</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      color: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
       text-align: center;
-      padding: 50px;
     }
+
     h1 {
-      font-size: 3rem;
+      font-size: 4em;
+      margin-bottom: 0.2em;
     }
+
     p {
-      font-size: 1.2rem;
-      color: #555;
+      font-size: 1.5em;
+      margin-bottom: 1.2em;
     }
-    a {
-      color: #000;
-      text-decoration: underline;
+
+    a.back-button {
+      background-color: #000;
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    a.back-button:hover {
+      background-color: #333;
     }
   </style>
 </head>
 <body>
-  <h1>404 - Page Not Found</h1>
-  <p>Oops! The page you're looking for doesn't exist.</p>
-  <a href="https://calchiwo.github.io/WodiWideWeb/">← Back to Home</a>
+  <h1>404</h1>
+  <p>Oops! The page you're looking for doesn’t exist.</p>
+  <a href="https://calchiwo.github.io/WodiWideWeb" class="back-button">← Back to Home</a>
 </body>
 </html>
