Increased the button size

--- a/404.html
+++ b/404.html
@@ -61,8 +61,16 @@
       }
 
       a.back-button {
-        padding: 10px 20px;
-        font-size: 0.9rem;
+  background-color: #000;
+  color: #fff;
+  padding: 20px 40px;
+  text-decoration: none;
+  border-radius: 12px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  transition: background 0.3s ease;
+}
       }
     }
   </style>
