Updated background size of 404 error page

--- a/404.html
+++ b/404.html
@@ -52,13 +52,28 @@
     }
 
     @media (max-width: 600px) {
-      h1 {
-        font-size: 4rem;
-      }
+  body {
+    padding: 40px 20px;
+    transform: scale(0.95); /* Zoom out a bit */
+  }
 
-      p {
-        font-size: 1.2rem;
-      }
+  .container {
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  a.back-button {
+    padding: 14px 28px;
+    font-size: 1.1rem;
+  }
+}
 
       a.back-button {
   background-color: #000;
