--- a/i-feel-so-depressed/index.html
+++ b/i-feel-so-depressed/index.html
@@ -8,10 +8,10 @@
   <!-- Prevent all bots from indexing or following -->
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
-  <meta name="description" content="A personal reflection by Caleb Chikanka Wodi (CALCHIWO) during a moment of deep inner struggle.">
+  <meta name="description" content="A personal reflection by Caleb Chikanka Wodi (CALCHIWO) during a moment of deep inner urgency and self-discovery.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
 
-  <!-- Canonical to your site to show it's original -->
+  <!-- Canonical URL to show it's the original -->
   <link rel="canonical" href="https://wodiwideweb.com/i-feel-so-depressed/">
 
   <link rel="stylesheet" href="../styles.css">
@@ -19,33 +19,46 @@
 <body>
 
   <header>
-    <h1>I Feel So Depressed</h1>
+    <h1>I Feel So Depressed 😔</h1>
     <p class="date">Posted on August 3, 2025</p>
   </header>
 
   <main>
     <article class="blog-post">
-      <p>I feel so depressed 😔<br>
-      Right now,<br>
-      I'm unsure of the future.<br>
-      I need <strong>GOD</strong> by me.<br>
-      I need <strong>Speed</strong>.<br>
-      I need <strong>Clarity</strong>.<br>
-      Everything is happening faster.<br>
-      I don't want to be part of the world,<br>
-      all doing the same thing.<br>
-      I want to <strong>ship faster</strong>.<br>
-      I want to <strong>learn faster</strong>.<br>
-      I want to <strong>be seen faster</strong>.<br>
-      I want to <strong>build faster</strong>.<br>
-      I want to <strong>understand who I am faster</strong>.<br>
-      I want to <strong>know my purpose faster</strong>.<br>
-      Life is too fast.<br>
-      Too short.<br>
-      <strong>No time</strong>.<br>
-      No time for jokes anymore.<br>
-      No time for dream anymore.<br>
-      I want to <strong>execute my plans</strong> <span style="letter-spacing: 10px;">N O W</span>!</p>
+      <p>
+        Right now,<br>
+        I'm unsure of the future.<br>
+        I need <strong>GOD</strong> by me.<br>
+        I need <strong>Speed</strong>.<br>
+        I need <strong>Clarity</strong>.<br>
+        Everything is happening faster.<br>
+        I don't want to be part of the world,<br>
+        all doing the same thing.<br>
+        I want to <strong>ship faster</strong>.<br>
+        I want to <strong>learn faster</strong>.<br>
+        I want to <strong>be seen faster</strong>.<br>
+        I want to <strong>build faster</strong>.<br>
+        I want to <strong>understand who I am faster</strong>.<br>
+        I want to <strong>know my purpose faster</strong>.<br>
+        Life is too fast.<br>
+        Too short.<br>
+        <strong>No time</strong>.<br>
+        No time for jokes anymore.<br>
+        No time for dreaming anymore.<br>
+        I want to <strong>execute my plans</strong> <span style="letter-spacing: 10px;">N O W</span>!
+      </p>
+
+      <blockquote>
+        <p>I don’t know where this urgency is coming from—but I feel it in my bones. I feel like I’m running out of time, even though I’m just 15. I keep asking myself: why now? why me? But maybe this pressure is a gift. Maybe it’s time to turn it into something that moves the world.</p>
+      </blockquote>
+
+      <blockquote>
+        <p>Dear God, lead me. I don’t want to run alone. I want to build with You. I want to be who You made me to be.</p>
+      </blockquote>
+
+      <blockquote>
+        <p>Note to self: Even if the world is spinning fast, breathe. Your timing doesn’t need to match theirs.</p>
+      </blockquote>
 
       <p style="margin-top: 2rem; font-weight: bold;">— Caleb Chikanka Wodi (CALCHIWO)</p>
     </article>
