--- a/i-feel-so-depressed/index.html
+++ b/i-feel-so-depressed/index.html
@@ -20,7 +20,7 @@
 
   <header>
     <h1>I Feel So Depressed 😔</h1>
-    <p class="date">Posted on August 3, 2025</p>
+    <p class="date">Published on August 3, 2025</p>
   </header>
 
   <main>
@@ -45,7 +45,7 @@
         <strong>No time</strong>.<br>
         No time for jokes anymore.<br>
         No time for dreaming anymore.<br>
-        I want to <strong>execute my plans</strong> <span style="letter-spacing: 10px;">N O W</span>!
+        I want to <strong>execute my plans</strong> <span style="letter-spacing: 6px;"> N O W </span>!
       </p>
 
       <blockquote>
