Aded 3rd blog to homepage

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <ul>
         <li><a href="why-i-started-this-blog/">Why I Started This Blog</a></li>
         <li><a href="sucamp2k25/">2k25 Scripture Union Camp: Done and Dusted</a></li>
+        <li><a href="i-feel-so-depressed/">I Feel So Depreesed</a></li>
       </ul>
     </section>
   </main>
