--- a/i-feel-so-depressed/index.html
+++ b/i-feel-so-depressed/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-
+<a href="https://calchiwo.github.io/WodiWideWeb/" class="back-button">← Back to Home</a>
   <header>
     <h1>I Feel So Depressed 😔</h1>
     <p class="date">Published on August 3, 2025</p>
