--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Welcome to WodiWideWeb</h1>
     <p class="date">The story behind the scene.</p>
-    <img src="WodiWideWeb.jpg" alt="WodiWideWeb Logo" class="featured-img">
+    <img src="WodiWideWeb.jpg" alt="Banner image for WodiWideWeb Homepage" class="featured-img">
   </header>
 
   <main>
@@ -31,7 +31,7 @@
       <ul>
         <li><a href="why-i-started-this-blog/">Why I Started This Blog</a></li>
         <li><a href="sucamp2k25/">2k25 Scripture Union Camp: Done and Dusted</a></li>
-        <li><a href="i-feel-so-depressed/">I Feel So Depreesed 😔</a></li>
+        <li><a href="i-feel-so-depressed/">I Feel So Depressed 😔</a></li>
       </ul>
     </section>
   </main>
