Polish signature in 2nd Blog

--- a/sucamp2k25/index.html
+++ b/sucamp2k25/index.html
@@ -57,7 +57,7 @@
 
         <p>Done and dusted… but definitely not forgotten.</p>
 
-        <p class="signature">—Calchiwo</p>
+        <p style="margin-top: 2rem; font-weight: bold;">— Caleb Chikanka Wodi (CALCHIWO)</p>
       </section>
     </article>
   </main>
