--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Welcome to WodiWideWeb</h1>
     <p class="date">The story behind the scene.</p>
-    <img src="WodiWideWeb.jpg" alt="Banner image for WodiWideWeb Homepage" class="featured-img">
+    <img src="WodiWideWeb.jpg" alt="Logo of WodiWideWeb Caleb Wodi" class="featured-img">
   </header>
 
   <main>
