--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Official Homepage of WodiWideWeb">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://wodiwideweb.com/home">
+  <link rel="canonical" href="https://wodiwideweb.com">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
