Connected css to 4th blog post

--- a/how-i-started-rocjet/index.html
+++ b/how-i-started-rocjet/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>How I Started Rocjet Technologies Ltd — WodiWideWeb</title>
   <meta name="description" content="How Caleb Chikanka Wodi founded Rocjet Technologies Ltd at 15, just after writing his JAMB exam." />
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
 
