--- a/how-i-started-rocjet/index.html
+++ b/how-i-started-rocjet/index.html
@@ -42,7 +42,7 @@
 
     <blockquote>
       “Start before you’re ready. Dream before they believe you. Build before they see it.”
-      <footer>— Caleb C. Wodi (CALCHIWO)</footer>
+      <p style="margin-top: 2rem; font-weight: bold;">— Caleb Chikanka Wodi (CALCHIWO)</p>
     </blockquote>
 
     <section class="call-to-action">
