Added the 3 buttons to top

--- a/how-i-started-rocjet/index.html
+++ b/how-i-started-rocjet/index.html
@@ -28,10 +28,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
 </head>
 <body>
-  <nav>
-    <a href="https://calchiwo.github.io/WodiWideWeb/" class="back-button">← Back to Home</a>
-  </nav>
-
+  <div class="top-bar">
+  <a href="https://calchiwo.github.io/WodiWideWeb/" class="back-button">← Back to Home</a>
+  
+  <div class="top-right-buttons">
+    <button id="light-mode-btn" title="Light Mode">🌞</button>
+    <button id="dark-mode-btn" title="Dark Mode">🌛</button>
+    <button id="copy-link-btn" title="Copy Link">🔗</button>
+  </div>
+</div>
   <main>
     <article class="blog-post" itemscope itemtype="https://schema.org/Article">
       <header>
@@ -94,5 +99,6 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     };
   </script>
+<script src="../main.js"></script>
 </body>
 </html>
