--- a/i-feel-so-depressed/index.html
+++ b/i-feel-so-depressed/index.html
@@ -17,7 +17,15 @@
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-<a href="https://calchiwo.github.io/WodiWideWeb/" class="back-button">← Back to Home</a>
+<div class="top-bar">
+  <a href="https://calchiwo.github.io/WodiWideWeb/" class="back-button">← Back to Home</a>
+  
+  <div class="top-right-buttons">
+    <button id="light-mode-btn" title="Light Mode">🌞</button>
+    <button id="dark-mode-btn" title="Dark Mode">🌛</button>
+    <button id="copy-link-btn" title="Copy Link">🔗</button>
+  </div>
+</div>
   <header>
     <h1>I Feel So Depressed 😔</h1>
     <p class="date">Published on August 04, 2025</p>
@@ -81,5 +89,6 @@
     window.scrollTo({top: 0, behavior: 'smooth'});
   };
 </script>
+<script src="../main.js"></script>
 </body>
 </html>
