--- a/sucamp2k25/index.html
+++ b/sucamp2k25/index.html
@@ -17,7 +17,11 @@
   <div class="top-right-buttons">
     <button id="light-mode-btn" title="Light Mode">🌞</button>
     <button id="dark-mode-btn" title="Dark Mode">🌛</button>
-    <button id="copy-link-btn" title="Copy Link">🔗</button>
+    <button id="copy-link-btn" title="Share this page" aria-label="Share this page" class="share-button">
+  <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20" fill="currentColor">
+    <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7a3.062 3.062 0 000-.81l7.05-4.11A2.993 2.993 0 0018 7.91c1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17c-.31 0-.61-.05-.89-.14l-7.05 4.11c.05.26.08.53.08.81 0 1.65-1.34 3-3 3s-3-1.35-3-3 1.34-3 3-3c.76 0 1.44.3 1.96.77l7.12-4.15a3.14 3.14 0 000-.81L9.96 7.24A3.003 3.003 0 006 9.91c-1.66 0-3-1.35-3-3s1.34-3 3-3 3 1.35 3 3c0 .28-.03.55-.08.81l7.05 4.11c.45-.28.97-.45 1.54-.45 1.66 0 3 1.35 3 3s-1.34 3.17-3 3.17z"/>
+  </svg>
+</button>
   </div>
 </div>
   <header>
