--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WodiWideWeb – Caleb Wodi's Personal Blog</title>
+  <title>WodiWideWeb: Caleb Wodi's Personal Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old tech founder and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.com">
-  <link rel="stylesheet" href="styles.css?v=4">
+  <link rel="stylesheet" href="styles.css?v=5">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
