--- a/i-feel-so-depressed/index.html
+++ b/i-feel-so-depressed/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>I Feel So Depressed — WodiWideWeb</title>
+  <title>WodiWideWeb: I Feel So Depressed</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Prevent all bots from indexing or following -->
