--- a/my-first-office/index.html
+++ b/my-first-office/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My First Office — WodiWideWeb</title>
+  <title>WodiWideWeb: My First Office</title>
 
   <!-- SEO Meta -->
   <meta name="description" content="Caleb Chikanka Wodi shares how he launched Rocjet Technologies Ltd from an unfinished building at age 15. A story of bold beginnings and quiet consistency." />
