Updated the title

--- a/how-i-started-rocjet/index.html
+++ b/how-i-started-rocjet/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>How I Started Rocjet Technologies Ltd — WodiWideWeb</title>
+  <title>WodiWideWeb: How I Started Rocjet Technologies Ltd</title>
 
   <!-- SEO Meta -->
   <meta name="description" content="How Caleb Chikanka Wodi founded Rocjet Technologies Ltd at 15, just after writing his JAMB exam." />
