Added Scroll to start button at top left

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <meta name="twitter:image" content="WodiWideWeb.jpg">
 </head>
 <body>
+  <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading">↓</button>
   <div class="top-bar">
     <div class="top-right-buttons">
       <button id="light-mode-btn" title="Light Mode" aria-label="Light Mode">🌞</button>
