--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.com">
-  <link rel="stylesheet" href="styles.css?v=9">
+  <link rel="stylesheet" href="styles.css?v=11">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -24,8 +24,9 @@
   <meta name="twitter:image" content="WodiWideWeb.jpg">
 </head>
 <body>
-      <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading"> Start ↓</button>
   <div class="top-bar">
+    <div class="top-left-button">
+      <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading"> Start ↓</button>
     <div class="top-right-buttons">
       <button id="light-mode-btn" title="Light Mode" aria-label="Light Mode">🌞</button>
       <button id="dark-mode-btn" title="Dark Mode" aria-label="Dark Mode">🌛</button>
