--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.com">
-  <link rel="stylesheet" href="styles.css?v=12">
+  <link rel="stylesheet" href="styles.css?v=13">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -26,7 +26,7 @@
 <body>
   <div class="top-bar">
   <div class="top-left-button">
-    <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading"> Start ↓</button>
+    <button id="scrollToStart" title="Start Reading" aria-label="Scroll to Start Reading">⬇ Scroll Down</button>
   </div>
   <div class="top-right-buttons">
     <button id="light-mode-btn" title="Light Mode" aria-label="Light Mode">🌞</button>
