--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old tech founder and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://wodiwideweb.com">
+  <link rel="canonical" href="https://calchiwo.github.io/WodiWideWeb/">
   <link rel="stylesheet" href="styles.css?v=15">
 
   <!-- Open Graph / Facebook -->
@@ -48,7 +48,7 @@
   <main>
     <section class="intro">
       <h1>
-        Hi, I’m <strong>Caleb Wodi</strong> — a 15-year-old tech founder and storyteller from Nigeria.
+        Hi, I’m <strong>Caleb Wodi (Calchiwo)</strong> — a 15-year-old tech founder and storyteller from Nigeria.
         <strong>WodiWideWeb</strong> is my digital sanctuary — where I document my journey, lessons, and moments in tech, life, and faith.
       </h2>
     </section>
