--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>WodiWideWeb: Caleb Wodi's Personal Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old tech founder and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
+  <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://calchiwo.github.io/WodiWideWeb/">
@@ -13,13 +13,13 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wodiwideweb.com">
-  <meta property="og:title" content="WodiWideWeb – Caleb Wodi's Personal Blog">
+  <meta property="og:title" content="WodiWideWeb: Caleb Wodi's Personal Blog">
   <meta property="og:description" content="A digital sanctuary where Caleb Wodi documents his journey through tech, life, and faith.">
   <meta property="og:image" content="WodiWideWeb.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="WodiWideWeb – Caleb Wodi's Personal Blog">
+  <meta name="twitter:title" content="WodiWideWeb: Caleb Wodi's Personal Blog">
   <meta name="twitter:description" content="Follow Caleb's journey in tech, life, and faith.">
   <meta name="twitter:image" content="WodiWideWeb.jpg">
 </head>
@@ -48,7 +48,7 @@
   <main>
     <section class="intro">
       <h1>
-        Hi, I’m <strong>Caleb Wodi (Calchiwo)</strong> — a 15-year-old tech founder and storyteller from Nigeria.
+        Hi, I’m <strong>Caleb Wodi (Calchiwo)</strong> — a 15-year-old tech entrepreneur and storyteller from Nigeria.
         <strong>WodiWideWeb</strong> is my digital sanctuary — where I document my journey, lessons, and moments in tech, life, and faith.
       </h2>
     </section>
