--- a/sucamp2k25/index.html
+++ b/sucamp2k25/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>2k25 Scripture Union Camp: Done and Dusted | WodiWideWeb</title>
+  <title>WodiWideWeb — 2k25 Scripture Union Camp: Done and Dusted</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Reflections from the 2025 Scripture Union Camp by Calchiwo. A story of peace, clarity, and finding God in the midst of thousands.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://wodiwideweb.com/2k25-scripture-union-camp-done-and-dusted">
+  <link rel="canonical" href="https://calchiwo.github.io/WodiWideWeb/sucamp2k25">
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
