--- a/my-first-office/index.html
+++ b/my-first-office/index.html
@@ -6,14 +6,14 @@
   <title>WodiWideWeb: My First Office</title>
 
   <!-- SEO Meta -->
-  <meta name="description" content="Caleb Chikanka Wodi shares how he launched Rocjet Technologies Ltd from an unfinished building at age 15. A story of bold beginnings and quiet consistency." />
-  <meta name="keywords" content="My First Office, Rocjet, Caleb Wodi, WodiWideWeb, Nigerian teen founder, Rocjet Technologies Ltd, startup Nigeria, teenage entrepreneur, tech journey" />
+  <meta name="description" content="Caleb Chikanka Wodi (Calchiwo) shares how he launched Rocjet Technologies Ltd from an uncompleted building at age 15. A story of bold beginnings and quiet consistency." />
+  <meta name="keywords" content="My First Office, Rocjet, Caleb Wodi, WodiWideWeb, Nigerian teen founder, Rocjet Technologies Ltd, startup Nigeria, teenage entrepreneur, calchiwo" />
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)" />
   <link rel="canonical" href="https://calchiwo.github.io/WodiWideWeb/my-first-office" />
 
   <!-- Open Graph for social previews -->
   <meta property="og:title" content="My First Office — Caleb C. Wodi" />
-  <meta property="og:description" content="From concrete floors to coding dreams — Caleb Chikanka Wodi shares the story of how he started Rocjet Technologies Ltd in an unfinished building." />
+  <meta property="og:description" content="From concrete floors to coding dreams — Caleb Chikanka Wodi shares the story of how he started Rocjet Technologies Ltd in an uncompleted building as a 15yo." />
   <meta property="og:image" content="https://calchiwo.github.io/WodiWideWeb/assets/my-first-office-thumbnail.jpg" />
   <meta property="og:url" content="https://calchiwo.github.io/WodiWideWeb/my-first-office" />
   <meta property="og:type" content="article" />
@@ -21,7 +21,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="My First Office — Caleb C. Wodi" />
-  <meta name="twitter:description" content="The true story of how Rocjet began in a raw, uncompleted building near my home. I was 15." />
+  <meta name="twitter:description" content="The true story of how Rocjet began in an uncompleted building near my home. I was 15." />
   <meta name="twitter:image" content="https://calchiwo.github.io/WodiWideWeb/assets/my-first-office-thumbnail.jpg" />
 
   <link rel="stylesheet" href="../styles.css" />
