Polish 6th blog post on homepage

--- a/100-days-of-rocjet/index.html
+++ b/100-days-of-rocjet/index.html
@@ -26,7 +26,7 @@
         <p><strong>🕒 Age:</strong> 15</p>
         <p><strong>✍️ Written by:</strong> <span itemprop="author" itemscope itemtype="https://schema.org/Person"><span itemprop="name">Caleb Chikanka Wodi</span></span></p>
       </header><section itemprop="articleBody">
-    <p>Today marks <strong>100 days</strong> since I began building <strong>Rocjet Technologies Ltd</strong>, and I’m beyond excited about how far I’ve come!</p>
+    <p>Today marks exactly <strong>100 days</strong> since I began this journey into building <strong>Rocjet Technologies Ltd</strong>, and I’m excited about how far I’ve come!</p>
 
     <p>As a <strong>15-year-old solo founder</strong> passionate about <strong>innovation</strong>, <strong>entrepreneurship</strong>, and <strong>storytelling</strong>, I’ve learned that success in this journey is rooted in three key principles:</p>
     <ul>
@@ -35,33 +35,33 @@
       <li>👉 Resilience</li>
     </ul>
 
-    <p>I’m incredibly proud of what I’ve achieved so far — and I’m even more excited for what lies ahead.</p>
+    <p>I’m incredibly proud of what I’ve achieved so far, and I’m even more excited for what lies ahead.</p>
 
     <hr />
     <h2>🚧 The Beginning</h2>
-    <p>I founded Rocjet Technologies Ltd on <strong>April 30, 2025</strong>, in an <em>uncompleted building near my home</em>. With nothing but a vision and determination, I set out to turn my ideas into real, practical tools.</p>
+    <p>I founded Rocjet Technologies Ltd on <strong>April 30, 2025</strong>, in an <em>uncompleted building near my home</em>. With nothing but a vision and determination to turn my ideas into real, practical tools.</p>
 
     <p>Since then, I’ve built and launched several early projects, including:</p>
     <ul>
       <li>🔐 <strong>WodiWebify</strong> — An encrypted note-taking web application</li>
       <li>🧮 <strong>WodiC</strong> — A voice-powered calculator with AI and scientific tools</li>
       <li>📬 <strong>WodiWaitlist</strong> — A waitlist platform for collecting email sign-ups ahead of my future launches</li>
-      <li>🌍 <strong>WodiWideWeb</strong> — A digital storytelling platform where I document my journey, reflections, lessons, and projects</li>
+      <li>🌍 <strong>WodiWideWeb</strong> — A personal storytelling platform where I document my journey, reflections, lessons, and projects</li>
     </ul>
 
     <hr />
     <h2>📚 Lessons Learned</h2>
-    <p>These past 100 days haven’t been easy. I’ve faced challenges like:</p>
+    <p>These past 100 days haven’t been easy. I’ve  faced challenges like:</p>
     <ul>
       <li>Debugging bugs that seemed impossible</li>
       <li>Managing my time between learning, building, and documenting</li>
-      <li>Staying focused when distractions called</li>
+      <li>Staying focused when distractions come</li>
     </ul>
     <p>But I’ve learned to persevere. I’ve realized that <strong>breaking down complex problems into smaller tasks</strong> is the secret to making consistent progress.</p>
 
     <hr />
     <h2>🚀 What’s Next?</h2>
-    <p>Over the next 100 days, I plan to:</p>
+    <p>For the next 100 days, I plan to:</p>
     <ul>
       <li>🚀 Launch <strong>WodiC v3</strong> with more advanced AI tools</li>
       <li>📈 Grow <strong>WodiWaitlist</strong> and gather user feedback</li>
