Polish the blog

--- a/100-days-of-rocjet/index.html
+++ b/100-days-of-rocjet/index.html
@@ -26,7 +26,7 @@
         <p><strong>🕒 Age:</strong> 15</p>
         <p><strong>✍️ Written by:</strong> <span itemprop="author" itemscope itemtype="https://schema.org/Person"><span itemprop="name">Caleb Chikanka Wodi</span></span></p>
       </header><section itemprop="articleBody">
-    <p>Today marks exactly <strong>100 days</strong> since I began this journey into building <strong>Rocjet Technologies Ltd</strong>, and I’m excited about how far I’ve come!</p>
+    <p>Today marks exactly <strong>the 100th day</strong> since I began this journey of building <strong>Rocjet Technologies Ltd</strong>, and I’m so excited about how far I’ve come</p>
 
     <p>As a <strong>15-year-old solo founder</strong> passionate about <strong>innovation</strong>, <strong>entrepreneurship</strong>, and <strong>storytelling</strong>, I’ve learned that success in this journey is rooted in three key principles:</p>
     <ul>
