--- a/100-days-of-rocjet/index.html
+++ b/100-days-of-rocjet/index.html
@@ -43,10 +43,10 @@
 
     <p>Since then, I’ve built and launched several early projects, including:</p>
     <ul>
-      <li>🔐 <strong><a href="https://github.com/Calchiwo/WodiWebify">WodiWebify</a></strong> — An encrypted note-taking web application</li>
-      <li>🧮 <strong><a href="https://calchiwo.github.io/WodiC">WodiC</a></strong> — A voice-powered calculator with AI and scientific tools</li>
-      <li>📬 <strong><a href="https://wodiwaitlist.netlify.app">WodiWaitlist</a></strong> — A waitlist platform for collecting email sign-ups ahead of my future launches</li>
-      <li>🌍 <strong><a href="https://wodiwideweb.netlify.app">WodiWideWeb</a></strong> — A personal storytelling platform where I document my journey, reflections, lessons, and projects</li>
+      <li>🔐 <strong><a href="https://github.com/Calchiwo/WodiWebify">WodiWebify</a></strong> An encrypted note-taking web application</li>
+      <li>🧮 <strong><a href="https://calchiwo.github.io/WodiC">WodiC</a></strong> A voice-powered calculator with AI and scientific tools</li>
+      <li>📬 <strong><a href="https://wodiwaitlist.netlify.app">WodiWaitlist</a></strong> A waitlist platform for collecting email sign-ups ahead of my future launches</li>
+      <li>🌍 <strong><a href="https://wodiwideweb.netlify.app">WodiWideWeb</a></strong> A personal storytelling platform where I document my journey, reflections, lessons, and projects</li>
     </ul>
 
     <hr />
