Added WodiMemories is the new Wodi Styles

--- a/100-days-of-building-rocjet/index.html
+++ b/100-days-of-building-rocjet/index.html
@@ -47,6 +47,7 @@
       <li>🧮 <strong><a href="https://calchiwo.github.io/WodiC">WodiC</a></strong> A voice-powered calculator with AI and scientific tools</li>
       <li>📬 <strong><a href="https://wodiwaitlist.netlify.app">WodiWaitlist</a></strong> A waitlist platform for collecting email sign-ups ahead of my future launches</li>
       <li>🌍 <strong><a href="https://wodiwideweb.netlify.app">WodiWideWeb</a></strong> A personal storytelling platform where I document my journey, reflections, lessons, and projects</li>
+      <li> $ <strong><a href="https://github.com/Calchiwo/WodiMemories">WodiMemories</a></strong>A photo gallery showcasing life’s moments, milestones, and memories</li>
     </ul>
 
     <hr />
