--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Rocjet Technologies Ltd. All Rights Reserved.</p>
-    <p>Developed by Caleb Chikanka Wodi (CALCHIWO)</p>
+    <p>© 2025 Rocjet Technologies Ltd. All Rights Reserved. BuiltByWodi®</p>
   </footer>
 
   <button id="backToTop" title="Back to Top" aria-label="Back to Top">↑ Top</button>
