--- a/sucamp2k25/index.html
+++ b/sucamp2k25/index.html
@@ -74,9 +74,7 @@
     </article>
   </main>
   <footer>
-    © 2025 Rocjet Technologies Ltd. All Rights Reserved.<br>
-    Developed by Caleb Chikanka Wodi (CALCHIWO)
-
+    © 2025 Rocjet Technologies Ltd. All Rights Reserved. BuiltByWodi®<br>
 
   </footer>
 <button id="backToTop" title="Back to Top">↑ Top</button>
