fixed content in hompage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="intro">
       <h1>
         Hi, I’m <strong>Caleb Wodi (Calchiwo)</strong> — a 15-year-old tech entrepreneur and storyteller from Nigeria.
-        <strong>WodiWideWeb</strong> is my digital sanctuary — where I document my journey, lessons, and moments in tech, life, and faith.
+        <strong>WodiWideWeb</strong> is my storytelling platform where I document my journey, lessons, and moments in tech, life, and faith.
       </h2>
     </section>
 
