Polish seo meta

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://calchiwo.github.io/WodiWideWeb/">
+  <link rel="canonical" href="https://wodiwideweb.netlify.app/">
   <link rel="stylesheet" href="styles.css?v=16">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wodiwideweb.com">
   <meta property="og:title" content="WodiWideWeb: Caleb Wodi's Personal Blog">
-  <meta property="og:description" content="A digital sanctuary where Caleb Wodi documents his journey through tech, life, and faith.">
+  <meta property="og:description" content="A personal storytelling platform where Caleb Wodi documents his journey through tech, life, and faith.">
   <meta property="og:image" content="WodiWideWeb.jpg">
 
   <!-- Twitter -->
