Added WodiMemories button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
     <p class="date">The story behind the scene.</p>
     <img src="WodiWideWeb.jpg" alt="Homepage banner: WodiWideWeb Logo by Caleb Wodi" class="featured-img">
   </header>
-
+<!-- WodiMemories Launch Alert -->
+  <div class="launch-alert">
+    🚀 <strong>WodiMemories is Live!</strong>  
+    <a href="https://wodimemories.netlify.app" target="_blank" class="launch-btn">Visit Now</a>
+  </div>
   <main>
     <section class="intro">
       <h1>
