--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <img src="WodiWideWeb.jpg" alt="Homepage banner: WodiWideWeb Logo by Caleb Wodi" class="featured-img">
   </header>
 <!-- WodiMemories Launch Alert -->
-  <div class="launch-alert">
-    🚀 <strong>WodiMemories is Live!</strong>  
+  <div class="launch-alert">🚀 <strong>WodiMemories is Live!</strong>  
     <a href="https://wodimemories.netlify.app" target="_blank" class="launch-btn">Visit Now</a>
   </div>
   <main>
