--- a/404.html
+++ b/404.html
@@ -71,9 +71,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>404</h1>
-    <p>Sorry, the page you're looking for doesn't exist.</p>
-    <a href="https://calchiwo.github.io/WodiWideWeb" class="back-button">← Back to Home</a>
+    <h1>Sorry, this page you're looking for doesn't exist (yet)</h1>
+    <p>Maybe I haven't lived that story</p>
+    <a href="https://wodiwideweb.netlify.app" class="back-button">← Back to Home</a>
+    <a href="https://wodiwideweb.netlify.app/random" class="random">Read a Random Story</a>
   </div>
 </body>
 </html>
