--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
       </h2>
     </section>
 
+
+    <section class="stats">
+      <p><strong>11 stories published and counting.......</strong></p>
+    </section>
+
     <section class="start-reading">
       <h2>Start Reading:</h2>
       <ul>
