--- a/legal/index.html
+++ b/legal/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Caleb Wodi (Calchiwo)">
   <meta name="keywords" content="WodiWideWeb, Disclaimer, Privacy Policy, Caleb Wodi, storytelling, personal blog">
   <link rel="canonical" href="https://wodiwideweb.netlify.app.com/disclaimer">
-
+  <link rel="canonical" href="https://wodiwideweb.netlify.app/privacy-policy"
   <!-- Styles -->
   <style>
     body {
@@ -95,7 +95,7 @@
     </section>
   </main>
 
-  <!-- Smooth Scroll + URL update -->
+  <!-- Smooth Scroll + URL update + JS -->
   <script>
     document.querySelectorAll('nav a').forEach(link => {
       link.addEventListener('click', function(e) {
