--- a/404.html
+++ b/404.html
@@ -53,6 +53,22 @@
       background-color: #333;
     }
 
+    a.random-button {
+      background-color: #000;
+      color: #fff;
+      padding: 20px 40px;
+      text-decoration: none;
+      border-radius: 12px;
+      font-weight: bold;
+      font-size: 1.5rem;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      transition: background 0.3s ease;
+    }
+
+    a.random-button:hover {
+      background-color: #333;
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 3.5rem;
@@ -74,7 +90,7 @@
     <h1>Sorry, this page you're looking for doesn't exist (yet)</h1>
     <p>Maybe I haven't lived that story</p>
     <a href="https://wodiwideweb.netlify.app" class="back-button">← Back to Home</a>
-    <a href="https://wodiwideweb.netlify.app/random" class="random">Read a Random Story</a>
+    <a href="https://wodiwideweb.netlify.app/random" class="random-button">Read a Random Story</a>
   </div>
 </body>
 </html>
