added WodiGames and BuiltByWodi Ecosystem

--- a/index.html
+++ b/index.html
@@ -118,6 +118,24 @@
       </ul>
     </section>
   </main>
+<!-- WodiWideWeb Ecosystem Section -->
+    <section class="ecosystem">
+      <h2>🌐 Explore More From BuiltByWodi®</h2>
+      <ul>
+        <li>
+          <span class="icon">📸</span>
+          <a href="https://wodimemories.netlify.app" target="_blank"><strong>WodiMemories</strong></a> — A photo gallery capturing life’s milestones and memories.
+        </li>
+        <li>
+          <span class="icon">🎮</span>
+          <a href="https://wodiwideweb.netlify.app/games/go" target="_blank"><strong>Wodi Games</strong></a> — Play fun, lightweight games built under WodiWideWeb.
+        </li>
+        <li>
+          <span class="icon">📖</span>
+          <a href="https://wodiwideweb.netlify.app/r" target="_blank"><strong>WodiWideWeb Random</strong></a> — Read a random story from my journey.
+        </li>
+      </ul>
+    </section>
 <!-- Newsletter Section -->
     <section class="newsletter">
       <p>💌 Stay updated — <a href="https://WodiWaitlist.netlify.app" target="_blank">Join my waitlist</a> to get the latest stories and updates.</p>
