added WodiGames and BuiltByWodi Ecosystem

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </li>
         <li>
           <span class="icon">🎮</span>
-          <a href="https://wodiwideweb.netlify.app/games/go" target="_blank"><strong>Wodi Games</strong></a> — Play fun, lightweight games built under WodiWideWeb.
+          <a href="https://wodiwideweb.netlify.app/WodiGames/go" target="_blank"><strong>Wodi Games</strong></a> — Play fun, lightweight games built under WodiWideWeb.
         </li>
         <li>
           <span class="icon">📖</span>
