--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </li>
         <li>
           <span class="icon">🎮</span>
-          <a href="https://wodiwideweb.netlify.app/WodiGames/games/go" target="_blank"><strong>WodiGames</strong></a> — Play fun, lightweight games built under BuiltByWodi® Projects.
+          <a href="https://wodigames.netlify.app/" target="_blank"><strong>WodiGames</strong></a> — Play fun, lightweight games built under BuiltByWodi® Projects.
         </li>
         <li>
           <span class="icon">📖</span>
