--- a/r/index.html
+++ b/r/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting to a Random Story...</title>
+  <title>Redirecting to a Random Story on WodiWideWeb...</title>
   <style>
     body {
       display: flex;
