--- a/404.html
+++ b/404.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>404 - WodiWideWeb</title>
+  <title>404 Page | WodiWideWeb</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Oops! The page you’re looking for on WodiWideWeb doesn’t exist yet. Discover stories or head back home.">
-  <meta name="author" content="Caleb Wodi - WodiWideWeb">
-  <meta property="og:title" content="404 - WodiWideWeb">
+  <meta name="author" content="Caleb Wodi">
+  <meta property="og:title" content="404 Page | WodiWideWeb">
   <meta property="og:description" content="Oops! The page you’re looking for on WodiWideWeb doesn’t exist yet.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wodiwideweb.netlify.app/404">
