--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>WodiWideWeb: Caleb Wodi's Personal Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
+  <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old teen tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.netlify.app/">
@@ -12,7 +12,7 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://wodiwideweb.com">
+  <meta property="og:url" content="https://wodiwideweb.netlify.app">
   <meta property="og:title" content="WodiWideWeb: Caleb Wodi's Personal Blog">
   <meta property="og:description" content="A personal storytelling platform where Caleb Wodi documents his journey through tech, life, and faith.">
   <meta property="og:image" content="WodiWideWeb.jpg">
@@ -41,8 +41,8 @@
 
   <header>
     <h3>Welcome to WodiWideWeb</h3>
-    <p class="date">The story behind the scene.</p>
-    <img src="WodiWideWeb.jpg" alt="Homepage banner: WodiWideWeb Logo by Caleb Wodi" class="featured-img">
+    <p class="date">The story-behind-the-scene.</p>
+    <img src="WodiWideWeb.jpg" alt="WodiWideWeb Logo by Caleb Wodi" class="featured-img">
   </header>
 <!-- WodiMemories Launch Alert -->
   <div class="launch-alert">🚀 <strong>WodiMemories is Live!</strong>  
@@ -51,7 +51,7 @@
   <main>
     <section class="intro">
       <h1>
-        Hi, I’m <strong>Caleb Wodi (Calchiwo)</strong> — a 15-year-old tech entrepreneur and storyteller from Nigeria.
+        Hi, I’m <strong>Caleb ''Calchiwo'' Wodi</strong> — a 15-year-old teen tech entrepreneur and storyteller from Nigeria.
         <strong>WodiWideWeb</strong> is my storytelling platform where I document my journey, lessons, and moments in tech, life, and faith.
       </h2>
     </section>
@@ -140,24 +140,24 @@
       <ul>
         <li>
           <span class="icon">📸</span>
-          <a href="https://wodimemories.netlify.app" target="_blank"><strong>WodiMemories</strong></a> — A photo gallery capturing life’s milestones and memories.
+          <a href="https://wodimemories.netlify.app" target="_blank"><strong>WodiMemories</strong></a> — A photo gallery capturing life’s moments and memories.
         </li>
         <li>
           <span class="icon">🎮</span>
-          <a href="https://wodigames.netlify.app/" target="_blank"><strong>WodiGames</strong></a> — Play fun, lightweight games built under BuiltByWodi® Projects.
+          <a href="https://wodigames.netlify.app/" target="_blank"><strong>WodiGames</strong></a> — Play fun, lightweight games built under BuiltByWodi® Projects by me, for everyone.
         </li>
         <li>
           <span class="icon">📖</span>
-          <a href="https://wodiwideweb.netlify.app/r" target="_blank"><strong>WodiWideWeb Random</strong></a> — Read a random story from my journey.
+          <a href="https://wodiwideweb.netlify.app/r" target="_blank"><strong>WodiWideWeb Random Story</strong></a> — Read a Random Story from my journey.
         </li>
       </ul>
     </section>
 <!-- Newsletter Section -->
     <section class="newsletter">
-      <p>💌 Stay updated — <a href="https://WodiWaitlist.netlify.app" target="_blank">WodiWaitlist</a> — join my waitlist to get the latest stories and updates.</p>
+      <p>💌 Stay updated with<a href="https://WodiWaitlist.netlify.app" target="_blank">WodiWaitlist</a> — join my waitlist to get the latest stories and updates.</p>
     </section>
   <footer>
-    <p>© 2025 Rocjet Technologies Ltd | BuiltByWodi®</p>
+    <p>© 2025 BuiltByWodi® Projects. Developed By Caleb ''Calchiwo'' Wodi</p>
   </footer>
 
   <button id="backToTop" title="Back to Top" aria-label="Back to Top">↑ Top</button>
