--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <header>
     <h3>Welcome to WodiWideWeb</h3>
-    <p class="date">The story-behind-the-scene.</p>
+    <p class="date">The story behind the scene.</p>
     <img src="WodiWideWeb.jpg" alt="WodiWideWeb Logo by Caleb Wodi" class="featured-img">
   </header>
 <!-- WodiMemories Launch Alert -->
