--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WodiWideWeb: Caleb Wodi's Personal Blog</title>
+  <title>WodiWideeb: Caleb Wodi's Personal Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old teen tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
