--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WodiWideWeb: Caleb Wodi's Personal Blog</title>
+  <title>WodiWideWeb: Caleb Wodi's Personal Storytelling  Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="WodiWideWeb is the official blog of Caleb Wodi – 15-year-old teen tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
+  <meta name="description" content="WodiWideWeb is the official storytelling blog of Caleb Wodi – 15-year-old teen tech entrepreneur and storyteller from Nigeria. Follow his journey in tech, life, and faith.">
   <meta name="author" content="Caleb Chikanka Wodi (CALCHIWO)">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://wodiwideweb.netlify.app/">
@@ -13,13 +13,13 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://wodiwideweb.netlify.app">
-  <meta property="og:title" content="WodiWideWeb: Caleb Wodi's Personal Blog">
+  <meta property="og:title" content="WodiWideWeb: Caleb Wodi's Personal Storytelling Blog">
   <meta property="og:description" content="A personal storytelling platform where Caleb Wodi documents his journey through tech, life, and faith.">
   <meta property="og:image" content="WodiWideWeb.jpg">
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="WodiWideWeb: Caleb Wodi's Personal Blog">
+  <meta name="twitter:title" content="WodiWideWeb: Caleb Wodi's Personal Storytelling Blog">
   <meta name="twitter:description" content="Follow Caleb's journey in tech, life, and faith.">
   <meta name="twitter:image" content="WodiWideWeb.jpg">
 </head>
